--- a/templates/question3.html
+++ b/templates/question3.html
@@ -5,7 +5,7 @@
    
 <h1>{{questions[2].question}}</h1>
 
-<form action="/questions/add3" method = "POST">
+<form action="/answer" method = "POST">
 <label for="yes">{{questions[2].choices[0]}}</label>
 <input type="radio" name="yes" id="yes" value = "Yes">
 <label for="no">{{questions[2].choices[1]}}</label>
