--- a/templates/question4.html
+++ b/templates/question4.html
@@ -5,7 +5,7 @@
    
 <h1>{{questions[3].question}}</h1>
 
-<form action="/questions/add4" method = "POST">
+<form action="/answer" method = "POST">
 <label for="yes">{{questions[3].choices[0]}}</label>
 <input type="radio" name="yes" id="yes" value = "Less than $10,000">
 <label for="no">{{questions[1].choices[1]}}</label>
