--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -5,7 +5,7 @@
 <h2>Your Answers:</h2>
 <ul>
     
-{%for answer in session['response']%}
+{%for answer in responses%}
 <li>{{answer}}</li>
 {%endfor%}
 </ul>
