--- a/templates/question1.html
+++ b/templates/question1.html
@@ -6,7 +6,7 @@
    
     <h1>{{questions[0].question}}</h1>
 
-    <form action="/questions/add1" method = "POST">
+    <form action="/answer" method = "POST">
     <label for="yes">{{questions[0].choices[0]}}</label>
     <input type="radio" name="yes" id="yes" value = "Yes">
     <label for="no">{{questions[1].choices[1]}}</label>
