--- a/templates/question2.html
+++ b/templates/question2.html
@@ -5,7 +5,7 @@
    
 <h1>{{questions[1].question}}</h1>
 
-<form action="/questions/add2" method = "POST">
+<form action="/answer" method = "POST">
 <label for="yes">{{questions[0].choices[0]}}</label>
 <input type="radio" name="yes" id="yes" value = "Yes">
 <label for="no">{{questions[1].choices[1]}}</label>
